# developtools_global_resource_tool

./: BUILD.gn  README.en.md  README.md  README_zh.md  bundle.json  restool.gni  restool_faq.json
include/: binary_file_packer.h  cmd_list.h  cmd_parser.h  compression_parser.h  config_parser.h  factory_resource_compiler.h  factory_resource_packer.h  file_entry.h  file_manager.h  generic_compiler.h  header.h  i_resource_compiler.h  id_defined_parser.h  id_worker.h  increment_manager.h  json_compiler.h  key_manager.h  key_parser.h  module_combine.h  overlap_binary_file_packer.h  overlap_compiler.h  preview_manager.h  rawfile_resfile_packer.h  reference_parser.h  resconfig_parser.h  resource_append.h  resource_check.h  resource_compiler_factory.h  resource_data.h  resource_directory.h  resource_dumper.h  resource_item.h  resource_merge.h  resource_module.h  resource_overlap.h  resource_pack.h  resource_packer_factory.h  resource_table.h  resource_util.h  restool_errors.h  (+6 more)
include/cmd/: cmd_parser.h  dump_parser.h  package_parser.h
src/: append_compiler.cpp  binary_file_packer.cpp  cmd_list.cpp  cmd_parser.cpp  compression_parser.cpp  config_parser.cpp  factory_resource_compiler.cpp  factory_resource_packer.cpp  file_entry.cpp  file_manager.cpp  generic_compiler.cpp  header.cpp  i_resource_compiler.cpp  id_defined_parser.cpp  id_worker.cpp  increment_list.cpp  json_compiler.cpp  key_parser.cpp  overlap_binary_file_packer.cpp  overlap_compiler.cpp  rawfile_resfile_packer.cpp  reference_parser.cpp  resconfig_parser.cpp  resource_append.cpp  resource_check.cpp  resource_compiler_factory.cpp  resource_directory.cpp  resource_dumper.cpp  resource_item.cpp  resource_merge.cpp  resource_module.cpp  resource_overlap.cpp  resource_pack.cpp  resource_packer_factory.cpp  resource_table.cpp  resource_util.cpp  restool.cpp  restool_errors.cpp  select_compile_parse.cpp  thread_pool.cpp  (+1 more)
src/cmd/: cmd_parser.cpp  dump_parser.cpp  package_parser.cpp
